@@ -254,6 +254,17 @@ allfiles.title=All Files
 allimages.title=All Images
 alltopics.title=All Topics
 allusers.title=All Users
+block.button.block=Block user
+block.caption.duration=Length of block
+block.caption.reason=Reason for block
+block.caption.user=IP Address or username
+block.caption.overview=Use the form below to block a specific IP address or login from editing or moving pages and from uploading files.  The blocked user will be alerted to the duration of the block, the login of the user who applied the block, and the reason for the block (for example, vandalizing specific pages).
+block.error.alreadyblocked=User "{0}" is already blocked.  To modify this block you must unblock and then re-block the user.
+block.error.duration=Invalid block length "{0}".  Block lengths must either be infinite or an integer value greater than zero.
+block.error.invaliduser=No user with a login of "{0}" exists.
+block.error.user=Either user login or IP address must be specified.
+block.message.success={0} has been blocked until {1}.
+block.title=Block user
 common.add=Add
 common.back=Back
 common.cancel=Cancel
@@ -268,6 +279,12 @@ common.continue=Continue
 common.date=Date
 common.default=Default
 common.delete=Delete
+common.interval.days=Days
+common.interval.hours=Hours
+common.interval.infinite=Infinite
+common.interval.minutes=Minutes
+common.interval.months=Months
+common.interval.weeks=Weeks
 common.exception.recaptcha=The CAPTCHA challenge words did not match the expected results.  Please enter the words pictured below.
 common.exception.name=The requested value "{0}" was invalid. It may contain one or more characters which cannot be used in titles.
 common.exception.notopic=Invalid or missing topic name.
@@ -525,6 +542,7 @@ setup.title=Setup JAMWiki {0}
 specialpages.caption.account=User registration
 specialpages.caption.admin=Configuration
 specialpages.caption.allpages=All topics
+specialpages.caption.block=Block user
 specialpages.caption.categories=All categories
 specialpages.caption.export=Export topics
 specialpages.caption.filelist=All files
@@ -631,6 +649,13 @@ upload.error.filetype=Administrative settings for this site do not allowed uploa
 upload.error.nodirectory=Uploads not supported, no valid directory to upload into.
 upload.help.destination=This field is optional and allows a name other than the source filename to be used for the uploaded file.  Note that filenames should always be given extensions (for example\: ".jpg" or ".txt").
 upload.title=File Upload
+userblock.caption.blockedby=The block was made by {0}.
+userblock.caption.end=Expiry of block: {0}
+userblock.caption.overview=Your user name or IP address has been blocked from editing and uploading files.
+userblock.caption.reason=The reason given is: <i>{0}</i>.
+userblock.caption.start=Start of block: {0}
+userblock.caption.target=Intended blockee: {0}
+userblock.title=User is Blocked
 usermenu.account=Account
 usermenu.admin=Admin
 usermenu.register=Register
