@@ -14,6 +14,7 @@
 				<prop key="/**/Special:Account">Register</prop>
 				<prop key="/**/Special:Admin">Admin</prop>
 				<prop key="/**/Special:AllPages">Items</prop>
+				<prop key="/**/Special:Block">Block</prop>
 				<prop key="/**/Special:Categories">Category</prop>
 				<prop key="/**/Special:Contributions">Contributions</prop>
 				<prop key="/**/Special:Diff">Diff</prop>
@@ -56,6 +57,7 @@
 	</bean>
 
 	<bean id="Admin" class="org.jamwiki.servlets.AdminServlet" />
+	<bean id="Block" class="org.jamwiki.servlets.BlockServlet" />
 	<bean id="Category" class="org.jamwiki.servlets.CategoryServlet" />
 	<bean id="Contributions" class="org.jamwiki.servlets.ContributionsServlet" />
 	<bean id="Diff" class="org.jamwiki.servlets.DiffServlet" />
